fix spacing errors

--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,7 @@ html {
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   text-size-adjust: 100%;
-  font: 16px 100%/1.3 Merriweather, serif;
+  font: 16px /1.3 Merriweather, serif;
 }
 
 *, *::before, *::after {
@@ -75,7 +75,7 @@ a {
 }
 
 .nav-check:checked ~ .nav-label {
-  background-color: rgba(255,255,255,0.5);
+  background-color: rgba(255, 255, 255, 0.5);
 }
 
 .nav-open,
@@ -83,7 +83,6 @@ a {
   display: block;
   width: 100%;
 }
-
 
 .nav-close {
   display: none;
@@ -107,7 +106,7 @@ a {
   margin: 1.2em .5em 0 0.5em;
 }
 
-header{
+header {
   color: #fff;
   background-color: #000;
   overflow: hidden;
@@ -115,11 +114,11 @@ header{
 }
 
 li:hover {
-  background-color: rgba(255,255,255,0.5);
+  background-color: rgba(255, 255, 255, 0.5);
 }
 
 .location:hover {
-  background-color: rgba(255,255,255,0.5);
+  background-color: rgba(255, 255, 255, 0.5);
   border-radius: 10px;
   border-width: 1px;
 }
@@ -167,7 +166,7 @@ h2 {
   top: 12%;
   width: 40%;
   max-width: 60em;
-  max-height: 45em
+  max-height: 45em;
   padding: 0 1rem;
   min-width: 221.2px;
 }
@@ -190,7 +189,7 @@ h2 {
 }
 
 .btn:hover {
-  background-color: rgba(255,255,255,0.5);
+  background-color: rgba(255, 255, 255, 0.5);
   border-color: #000;
   color: #000;
   border-width: 1px;
@@ -233,11 +232,11 @@ h5 {
 }
 
 h4 {
-    color: #000;
+  color: #000;
 }
 
 h4:hover {
-  color: rgba(255,40,55,1);
+  color: rgba(255, 40, 55, 1);
 }
 
 .location-map {
@@ -272,7 +271,7 @@ footer {
 }
 
 .email {
-  color: rgba(50,50,255,1);
+  color: rgba(50, 50, 255, 1);
   text-decoration: underline;
 }
 
@@ -334,7 +333,7 @@ footer {
   }
 
   li a:hover {
-    color: rgba(255,40,55,1);
+    color: rgba(255, 40, 55, 1);
     text-decoration: underline;
   }
 
@@ -381,7 +380,7 @@ footer {
     transform: translateX(-50%);
     transform: translateY(-50%);
     padding: 1em;
-    background-color: rgba(255,255,255,0.5);
+    background-color: rgba(255, 255, 255, 0.5);
   }
 
   .menu {
